Bugfix: use a more readable color for table status ok rows

--- a/sites/all/themes/mcneese/css/screen/screen-text.css
+++ b/sites/all/themes/mcneese/css/screen/screen-text.css
@@ -36,6 +36,11 @@
   font-weight: bold;
 }
 
+.mcneese table > tbody > tr.ok,
+.mcneese div.status {
+  background-color: #d1f7cb;
+}
+
 
 
 /*** Watermarks ***/
